--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-            "contractor\\": "src/"
+            "contractor\\": "src"
         },
         "files": [
             "src//Base/Helpers/Constants.php",
